# Autonomic

./: .coveragerc  .gitignore  README  main.py  pyproject.toml  tox.ini
docs/: README.md  functions.md  next_function.md  operation.md  services.md
functions/: consensus.py  delegation.py  peers.py  registration.py  state.py  tasks.py  utility.py
prompts/: bootstrap.md  duty_cycle.md  failure_handeling.md  hotstuff_consensus_setup.md  hotstuff_consensus_view.md  hotstuff_saftey_rules.md  leader_change.md  sleep_protocol.md  superagent_election.md  task_delegation.md
